Add accelerator to letter "W"

--- a/src-assets-ff/manifest.json
+++ b/src-assets-ff/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Move Tab to Next Window",
+  "name": "Move Tab to Next &Window",
   "version": "1.2.0",
   "description": "One-click to move a tab to the next window from a button or tab context menu",
   "homepage_url": "https://github.com/rshev/MoveTabToNextWindow",
